--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,9 @@
 
 @plugin "@tailwindcss/forms";
 @plugin 'tailwind-scrollbar';
+
+@layer components {
+  .btn {
+    @apply h-7 hover:scale-125 transition-transform duration-200 ease-out cursor-pointer;
+  }
+}
